added live urls pointing to matrix-agents and made associated code modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
 <section class='app-layout'>
   <div class='row app-header' role='app-header'>
     <div class='col l1 s12'>&nbsp;</div>
-    <div class='col l2 s2 app-logo'>
-      <img src="/assets/images/hiTechHomeLogo.PNG">
+    <div class='col l1 s2 app-logo'>
+      <img src="assets/images/hiTechHomeLogo.PNG">
     </div>
     <div class='col l6 s10 app-title'>
       <div class='app-title-text'>Matrix Dashboards</div>
     </div>
-    <div class='col l3 s12'></div>
+    <div class='col l3 s12 app-title position-relative'>
+      <div class='app-greeting-text left-vertical-center-align-content'>Good Day</div>
+      <div class='app-settings-container right-vertical-center-align-content'>
+        <a (click)="signOut()">Sign out</a>
+      </div>
+    </div>
+    <div class='col l1 s12'></div>
   </div>
   <div class='row app-body' role='app-content'>
     <div class="col l1 s12"></div>
