--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,3 @@
-/*this comment is to be deleted */
-
 @import "../assets/styles/_colors.scss";
 .app-layout {
     .app-header {
@@ -31,6 +29,17 @@
                 left: 10px;
                 margin: auto;
                 height: 44px;
+            }
+            .app-greeting-text {
+                height: 0px;
+                font-size: 20px;
+            }
+            .app-settings-container {
+                font-size: 12px;
+                a:hover {
+                    cursor: pointer;
+                    text-decoration: underline;
+                }
             }
         }
     }
