--- a/src/app/security/components/login/login.component.html
+++ b/src/app/security/components/login/login.component.html
@@ -5,7 +5,7 @@
     <div class="col l4 s12">
       <h1>Login</h1>
       <app-alert></app-alert>
-      <div [class.invalid]="{
+      <div [ngClass]="{
         'invalid':loginForm.username.errors.required,
         'valid':loginForm.username.value && !loginForm.username.errors.required
       }">
