--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,21 @@
     <div class='col l6 s10 app-title'>
       <div class='app-title-text'>Matrix Dashboards</div>
     </div>
-    <div class='col l3 s12 app-title position-relative'>
+    <!--<div class='col l3 s12 app-title position-relative'>
       <div class='app-greeting-text left-vertical-center-align-content'>Good Day</div>
       <div class='app-settings-container right-vertical-center-align-content'>
         <a (click)="signOut()">Sign out</a>
       </div>
-    </div>
+    </div>-->
     <div class='col l1 s12'></div>
+    <div class='app-greeting-text left-vertical-center-align-content'>
+      <span *ngIf="authService.currentUserName">Good day,&nbsp;
+        <strong>{{authService.currentUserName}}</strong>
+      </span>
+    </div>
+    <div class='app-settings-container right-vertical-center-align-content'>
+      <a *ngIf="authService.isUserAuthenticated" (click)="signOut()">Sign out</a>
+    </div>
   </div>
   <div class='row app-body' role='app-content'>
     <div class="col l1 s12"></div>
