--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
     .app-header {
         height: 100px;
         border-bottom: 3px solid $app-title-section-separator-color;
+        position: relative;
         .app-logo {
             text-align: right;
             padding-top: 5px;
@@ -30,16 +31,23 @@
                 margin: auto;
                 height: 44px;
             }
-            .app-greeting-text {
-                height: 0px;
-                font-size: 20px;
-            }
-            .app-settings-container {
-                font-size: 12px;
-                a:hover {
-                    cursor: pointer;
-                    text-decoration: underline;
-                }
+        }
+        .app-greeting-text {
+            height: 100%;
+            color: $app-title-color;
+            margin: 5px;
+            font-size: 12px;
+            text-align: right;
+            width: 70%
+        }
+        .app-settings-container {
+            height: 100%;
+            color: $app-title-color;
+            margin: 5px;
+            font-size: 12px;
+            a:hover {
+                cursor: pointer;
+                text-decoration: underline;
             }
         }
     }
