cryptoJS and openssl encryption

--- a/src/app/modules/landing-page/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page/landing-page.component.html
@@ -1,3 +1,16 @@
-<p>
-  landing-page works!
-</p>
+<section class="app-landing-page">
+  <div class="row">
+    <div class="col l4 s12"></div>
+    <div class="col l4 s12">
+      <mat-nav-list>
+        <mat-list-item *ngFor="let link of links" (click)="openModule(link)">
+          <a matLine>{{ link.label }}</a>
+          <button mat-icon-button>
+            <mat-icon>info</mat-icon>
+          </button>
+        </mat-list-item>
+      </mat-nav-list>
+    </div>
+    <div class="col l4 s12"></div>
+  </div>
+</section>
